# site

./: .gitignore  Dockerfile  GopherGraphics(2).jsx  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
Client/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Client/src/: App.css  App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
Client/src/api/: auth.ts  channels.ts  directMessages.ts  http.ts  projects.ts  users.ts
Client/src/components/: AssetIcon.tsx  ImageCarousel.jsx  ImageCarousel.tsx  ImageCropper.jsx  ImageCropper.tsx  LoginModal.jsx  LoginModal.tsx  Nav.jsx  Nav.tsx  Orbs.jsx  Orbs.tsx  ProjectDetailModal.jsx  ProjectDetailModal.tsx  UploadProjectModal.jsx  UploadProjectModal.tsx
Client/src/constants/: defaultAvatars.ts  theme.js  theme.ts
Client/src/contexts/: AuthContext.tsx
Client/src/data/: mockData.js  mockData.ts
Client/src/pages/: AboutPage.jsx  AboutPage.tsx  DashboardPage.jsx  DashboardPage.tsx  HomePage.jsx  HomePage.tsx  MessagesPage.jsx  MessagesPage.tsx  ProjectsPage.jsx  ProjectsPage.tsx  UserProfilePage.tsx
Client/src/types/: index.ts
Client/src/util/: image.ts
Rust-Server/: Cargo.toml
Rust-Server/src/: app.rs  db.rs  main.rs
Rust-Server/src/routes/: users.rs
Server/: .gitignore  init.sql  package-lock.json  package.json  scratch.js  vitest.config.ts
Server/Server/: package-lock.json
Server/src/: app.ts  db.ts  server.ts
Server/src/middleware/: auth.ts
Server/src/routes/: channels.ts  directMessages.ts  projects.ts  (+1 more)
(+8 files in other folders)
