[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
governor = "0.6"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
